# wejoy

./: .gitignore  Architecture Improvement.docx  ArchitectureDiagram.puml  ArchitectureOverview.docx  CKeyboard.cc  CKeyboard.h  CMakeLists.txt  CVirtualJoy.cc  CVirtualJoy.h  CVirtualKeyboard.cc  CVirtualKeyboard.h  ChangedArchitectureDiagram.puml  LOG  LuaScript.cc  LuaScript.h  Vagrantfile  build_all.sh  build_and_test.sh  buttons_ref.h  example.lua  global.h  il2_missing_axis.lua  installService.sh  joystick.cc  joystick.h  keycodes_ref.txt  lua_key_codes.h  main.cc  make-event-names.py  make.sh  part one essay.docx  part2.md  readme.md  run_tests.sh  suinput.c  suinput.h  t16000m.lua  warthog_throttle.lua  wejoy  wejoy-run.sh  (+2 more)
documentation/: Architecture Improvement.docx  ArchitectureDiagram.puml  ArchitectureOverview.docx  ChangedArchitectureDiagram.puml  TestingArchitectureDiagram.puml
original_code/: CVirtualJoy.h  CVirtualKeyboard.h  LuaScript.cc  LuaScript.h  buttons_ref.h  example.lua  global.h  joystick.cc  joystick.h  keycodes_ref.txt  main.cc  make.sh  readme.md  suinput.c  warthog_throttle.lua
original_code/tests/: CMakeLists.txt  controller.h  suinput.c  test_main.cpp
resource/: codes_edited.h  generate_lua_keys.py  lua_key_codes.h
scripts/: example.lua  wiimote_guitar.lua
temp/: buttons_ref.h  keycodes_ref.txt  shared_type.h_  shifter2.lua  systemdeviceinfo.h_  warthog_throttle.lua
tests/: CMakeLists.txt  buttons_ref.h  controller.cpp  controller.h  test.cpp  test_main.cpp
